<resources>
    <string name="app_name">String</string>
    <string name="discover_the_endless">Discover the Endless</string>
    <string name="possibilities_of_travel">Possibilities of Travel</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="enter_you_email_address">Enter you email address</string>
    <string name="name">Name</string>
    <string name="enter_your_name_optional">Enter your name (optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="username">Username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="password">Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="back">Back</string>
    <string name="read_and_agree">I have read and agree to String\'s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_small">Log in</string>
    <string name="done">Done</string>
    <string name="thankyou_text">Thank you for signing up for a String account!\nPlease provide your particulars below.</string>
    <string name="cancle">Cancle</string>
    <string name="log_into_your_account">Log into your Account</string>
    <string name="with_facebook">WITH FACEBOOK</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_button">Back Button</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_email">Enter your email address below and follow the instructions in the email we\'ll send you.</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="notification_empty">Notification Empty</string>
    <string name="a_verification_email_has_been_sent_to">A verification email has been sent to:</string>
    <string name="kane_gmail_com">kane@gmail.com</string>
    <string name="check_email_text">Check your email and click on the verification link to active your account.</string>
    <string name="email_resent">Email Resent</string>
    <string name="open_mail_app">OPEN MAIL APP</string>
    <string name="error">Error!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>

    <string name="hide_bottom_view_on_scroll_behavior" translatable="false">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="feed">Feed</string>
    <string name="time_feed_post">7 hours ago</string>
    <string name="username_feed_post">Kane Vinova</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="post_image">Post Image</string>
    <string name="location">Location</string>
    <string name="play_button">Play Button</string>
    <string name="time_duration">01:10</string>
    <string name="like_icon">Like Icon</string>
    <string name="comment_icon">Comment Icon</string>
    <string name="show_more_feed">Show more feed</string>
    <string name="saved_post_count">3</string>
    <string name="address_poi_text">The Garden of Morning Calm</string>
    <string name="location_text">Seoul, South Korea</string>
    <string name="username_poi">kane.vinova</string>
    <string name="itinerary_title_text">Top 5 Sake Bar In Tokyo: For Sake Lovers!</string>
    <string name="string">String</string>
    <string name="recreate">Recreate</string>
    <string name="desc_itenerary_text">Sake is growing in popularity both nationally an internationally.</string>
    <string name="_0">0</string>
    <string name="location_image">Location Image</string>
    <string name="interest_image">Interest Image</string>
    <string name="adventure">Adventure</string>
    <string name="select_interests">Select Interests</string>
    <string name="_3_more">3 More</string>
    <string name="select_at_least_3_tags_that_represents_your_interests">Select at least 3 tags that represents your interests</string>
</resources>