<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:enabled="true"
        android:title="@string/search"/>
    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:enabled="true"
        android:title="@string/post"/>
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:enabled="true"
        android:title="@string/notification"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:enabled="true"
        android:title="@string/profile"/>
</menu>