<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="vinova.kane.string.ui.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="vinova.kane.string.ui.main.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/postFragment"
        android:name="vinova.kane.string.ui.main.PostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="vinova.kane.string.ui.main.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="vinova.kane.string.ui.main.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>