<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterByFbFragment">

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/abeezee"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:fontFamily="@font/abeezee"
        android:id="@+id/done_button"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@drawable/drawable_button"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RelativeOverlap"
        tools:targetApi="lollipop" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_text" />

    <TextView
        android:id="@+id/thankyou_text"
        android:layout_marginTop="@dimen/standard_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/small_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/thankyou_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginStart="@dimen/standard_margin"
        style="@style/TextViewStyle"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/thankyou_text"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/username_text"/>

    <EditText
        android:hint="@string/enter_a_username"
        app:layout_constraintStart_toStartOf="@id/username_text"
        app:layout_constraintTop_toBottomOf="@id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/standard_margin"
        android:id="@+id/username_edit_text"
        style="@style/EditTextStyle"
        android:autofillHints="@string/name"
        android:inputType="text" />

    <View
        style="@style/ViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text"
        android:layout_marginTop="@dimen/standard_margin"
        android:id="@+id/view_2"/>

    <TextView
        android:id="@+id/name_text"
        style="@style/TextViewStyle"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/username_edit_text"
        app:layout_constraintTop_toBottomOf="@id/view_2" />

    <EditText
        android:hint="@string/enter_your_name_optional"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintEnd_toEndOf="@id/username_edit_text"
        android:id="@+id/name_edit_text"
        style="@style/EditTextStyle"
        android:autofillHints="@string/name"
        android:inputType="text" />

    <View
        style="@style/ViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        android:layout_marginTop="@dimen/standard_margin"
        android:id="@+id/view_3"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/view_3"
        app:layout_constraintStart_toStartOf="@id/username_text"
        android:id="@+id/date_of_birth_text"/>

    <EditText
        android:hint="@string/enter_date_of_birth"
        app:layout_constraintStart_toStartOf="@id/username_edit_text"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth_text"
        app:layout_constraintEnd_toEndOf="@id/username_edit_text"
        android:id="@+id/date_edit_text"
        style="@style/EditTextStyle"
        android:autofillHints="@string/name"
        android:inputType="date" />

    <View
        style="@style/ViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_edit_text"
        android:layout_marginTop="@dimen/standard_margin"
        android:id="@+id/view_4"/>

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/terms_radio_button"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="@id/username_text"
        app:layout_constraintTop_toBottomOf="@id/view_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop" />

    <TextView
        android:textSize="@dimen/small_text_size"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintTop_toTopOf="@id/terms_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/read_and_agree"
        android:id="@+id/read_and_agree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold"
        android:text="@string/terms_of_service"
        app:layout_constraintTop_toBottomOf="@id/read_and_agree_text"
        app:layout_constraintStart_toStartOf="@id/read_and_agree_text"
        android:id="@+id/terms_of_service_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>

